# verilog-eval

./: Dockerfile.dev  README.md  pyproject.toml  run.sh
verilog_eval/: execution.py
